--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0, user-scalable=no" name="viewport">
-  <title>Fourise Software Solution Pvt. Ltd.</title>
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+  <title>Fourise Software Solutions Pvt. Ltd.</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/testimonials/favicon1.jpg" rel="icon">
   <link href="assets/img/testimonials/favicon1.jpg" rel="apple-touch-icon">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">  
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -28,39 +28,36 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- Lottie Animation Library -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.6/bodymovin.min.js"></script>
-
+  <!-- =======================================================
+  * Template Name: Presento - v1.1.1
+  * Template URL: https://bootstrapmade.com/presento-bootstrap-corporate-template/
+  * Author: BootstrapMade.com
+  * License: https://bootstrapmade.com/license/
+  ======================================================== -->
   <style>
-    body {
-      overflow-x: hidden; /* Hides the horizontal scrollbar */
-      overflow-y: scroll; /* Keeps the vertical scroll functionality */
-      scrollbar-width: thin; /* For Firefox, to make the scrollbar thinner */
-    }
+  body {
+    overflow-x: hidden; /* Hides the horizontal scrollbar */
+    overflow-y: scroll; /* Keeps the vertical scroll functionality */
+    scrollbar-width: thin; /* For Firefox, to make the scrollbar thinner */
+  }
 
-    /* Optional: For Webkit browsers like Chrome/Safari */
-    ::-webkit-scrollbar {
-      width: 0px; /* Hides the scrollbar */
-    }
-    
-    ::-webkit-scrollbar-thumb {
-      background: transparent; /* Optional: Make the scrollbar thumb invisible */
-    }
-
-    /* Add media query for 425px screens */
-    @media (max-width: 425px) {
-        #logoText {
-            font-size: 12px !important;  /* Force font-size to 12px for screens <= 425px */
-            margin-left: -5px !important; /* Adjust margin-left */
-        }
-    }
-  </style>
+  /* Optional: For Webkit browsers like Chrome/Safari */
+  ::-webkit-scrollbar {
+    width: 0px; /* Hides the scrollbar */
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background: transparent; /* Optional: Make the scrollbar thumb invisible */
+  }
+</style>
 </head>
 
 
 <body>
-  <!-- Header -->
- <header id="header" style="background: #fff; box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1); position: fixed; top: 0; width: 100%; z-index: 999; padding: 15px 0;">
+
+  <!-- ======= Header ======= -->
+ <!-- Header -->
+  <header id="header" style="background: #fff; box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1); position: fixed; top: 0; width: 100%; z-index: 999; padding: 15px 0;">
     <div style="display: flex; justify-content: center; align-items: center;">
         <h1 id="logoText" style=" font-weight: bold; margin: 0; padding: 0; color: #e03a3c;">
             <a href="index.html" style="text-decoration: none; color: inherit;">
@@ -75,14 +72,52 @@
               <li class="nav-item" style="margin: 0 20px;"><a href="services.html" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Services</a></li>
               <li class="nav-item" style="margin: 0 20px;"><a href="product.html" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Product</a></li>
               <li class="nav-item" style="margin: 0 20px;"><a href="contact.html" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Contact</a></li>
-              <li class="nav-item" style="margin: 0 20px;"><a href="internship.html" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Internship</a></li>
             </ul>
           </nav>
     </div>
 </header>
 
 <script>
-  function adjustLogoAndNav() {
+  document.addEventListener("DOMContentLoaded", function () {
+    const navLinks = document.querySelectorAll('.nav-item');
+
+    // Function to highlight active nav link
+    function highlightActiveLink() {
+        navLinks.forEach(link => {
+            link.addEventListener('click', function () {
+                // Reset the styles for all links
+                navLinks.forEach(item => {
+                    const anchor = item.querySelector('a');
+                    anchor.style.color = "#111";  // Default color
+                    anchor.style.fontWeight = "500";  // Default font weight
+                });
+
+                // Apply styles for active link
+                const activeAnchor = this.querySelector('a');
+                activeAnchor.style.color = "#e03a3c";  // Active color
+                activeAnchor.style.fontWeight = "bold";  // Active font weight
+            });
+        });
+
+        // Retain active state based on current page (color applied directly here)
+        const currentPage = window.location.pathname.split("/").pop();
+        navLinks.forEach(link => {
+            const anchor = link.querySelector('a');
+            if (anchor.getAttribute('href') === currentPage) {
+                anchor.style.color = "#e03a3c";  // Active color
+                anchor.style.fontWeight = "bold";  // Active font weight
+            }
+        });
+    }
+
+    // Run the function to highlight active link
+    highlightActiveLink();
+
+    // Adjust logo and nav on screen resize
+    adjustLogoAndNav();
+});
+
+function adjustLogoAndNav() {
     const logoText = document.getElementById("logoText");
     const mobileNavToggle = document.querySelector(".mobile-nav-toggle");
 
@@ -93,7 +128,7 @@
     // Adjust font size and margin-left based on screen width
     let fontSize;
     let marginLeft;
-    
+
     if (screenWidth <= 320) {
         fontSize = "14px";  // Extra Small Screens
         marginLeft = "-20px"; // Extra Small Screens margin
@@ -125,7 +160,7 @@
     // Adjust margin-top for .mobile-nav-toggle dynamically
     let marginTop;
     if (screenWidth <= 320) {
-        marginTop = "-21px";  // Extra Small Screens
+        marginTop = "-30px";  // Extra Small Screens
     } else if (screenWidth <= 375) {
         marginTop = "-30px";  // Small Mobile Screens
     } else if (screenWidth <= 425) {
@@ -155,11 +190,6 @@ function debounce(func, delay) {
 }
 
 window.addEventListener("resize", debounce(adjustLogoAndNav, 100));
-
-
-
-
-
 
 
 
